--- a/Bootstrapdemo/Comfirm.html
+++ b/Bootstrapdemo/Comfirm.html
@@ -5,29 +5,31 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal-label" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModal-label">Are you sure?</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Are you sure you wish to submit this album?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Confirm</button>
+    <div class="container">
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModal-label" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content col-md-6">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModal-label">Are you sure?</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you wish to submit this album?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary">Confirm</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container">
+
         <div class="row">
-            <button type="button" class="col-md-offset-3 col-md-6 btn btn-success" data-toggle="modal" data-target="#myModal">Open dialog</button>
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">Open Dialog</button>
         </div>
     </div>
     <script src="Scripts/jquery-2.1.3.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
+
 </body>
 </html>
