--- a/Bootstrapdemo/index.html
+++ b/Bootstrapdemo/index.html
@@ -43,7 +43,7 @@
             <img id="javascript_logo" src="img/jslogo.jpg" alt="Lissete Moscoso | Desarrolldora front-end" class="blog-logo blog-logo--back center-block img-circle" />
         </a>
         <div class="text-center">
-            <h3 style="color:#669999; font-weight:bold;">Lissete Moscoso - Desarrolladora front-end</h3>
+            <h3 style="color:#669999; font-weight:bold;">Lisseeete Moscoso - Desarrolladora front-end</h3>
         </div>
     </div>
     <div class="container bs-docs-container">
